--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Open+Sans:wght@300&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik+Burned&family=Teko:wght@300..700&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -62,6 +63,9 @@ nav a img {
 .nosotros img{
     width: 500px;
 }
+.nosotros div p{
+    font-family: "Roboto Mono", monospace;
+}
 .nosotros div{
     width: 50%;
 }
@@ -80,6 +84,7 @@ nav a img {
 }
 .servicios div p{
     text-align: center;
+    font-family: "Roboto Mono", monospace;
 }
 .servicios div h2{
     text-align: center;
