--- a/css/style.css
+++ b/css/style.css
@@ -206,12 +206,14 @@ footer i {
 }
 
 @media screen and (max-width: 768px) {
-    .nosotros div img {
-        width: 80%;
+    .nosotros  img {
+        width: 100%;
+        height: auto;
         /* Reducir el ancho de la imagen para pantallas más pequeñas */
     }
-    .servicios div img {
-        width: 80%;
+    .servicios  img {
+        width: 100%;
+        height: auto;
         /* Reducir el ancho de la imagen para pantallas más pequeñas */
     }
     
