--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,44 @@ footer i {
     color: #1A1A1D;
     font-size: 50px;
 }
+form{
+    background-color:#FFB200;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-block: 20px;
+    border: 2px solid salmon;
+    width: 500px;
+    margin: 0 auto;
+}
+form label input{
+    padding: 10px;
+    width: 100%;
+    
+    
+}
+form button{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+
+}
+.button-container{
+    display: flex;
+    gap: 10px;
+}
+.button-container button{
+    border-radius: 10px;
+    padding: 5px;
+}
+input, textarea{
+    margin-bottom: 10px;
+    width: 100%;
+    border: 2px solid #1A1A1D;
+}
 
 /*------------------------------media queries--------------------*/
 
